// Copyright 2013 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package message;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message EchoRequest {
	optional string msg = 1 [(gogoproto.nullable) = false];
}

message EchoResponse {
	optional string msg = 1 [(gogoproto.nullable) = false];
}
